fixed 20 warnings in MyGameStateFactory.